test_next-20160301/20160229221534/sparse/defconfig/sparse_20160229221534_log.txt
test_sparse: Mon Feb 29 22:19:48 PST 2016: started on defconfig test_next-20160301 (6fa6381cb550382528be4392e210be69928f0bcd)
test_sparse: Mon Feb 29 22:19:48 PST 2016: serial is 20160229221534
test_sparse: sparse version unknown (checksum d41d8cd98f00b204e9800998ecf8427e)
In file included from include/linux/kvm_host.h:35:0,
                 from arch/arm64/kernel/asm-offsets.c:24:
./arch/arm64/include/asm/kvm_host.h: In function ‘__cpu_init_stage2’:
./arch/arm64/include/asm/kvm_host.h:375:2: error: implicit declaration of function ‘kvm_call_hyp’ [-Werror=implicit-function-declaration]
  kvm_call_hyp(__init_stage2_translation);
  ^
cc1: some warnings being treated as errors
make[1]: *** [arch/arm64/kernel/asm-offsets.s] Error 1
make: *** [prepare0] Error 2
make: *** Waiting for unfinished jobs....
test_sparse: Mon Feb 29 22:19:52 PST 2016: FAILED on defconfig test_next-20160301
test_sparse: Mon Feb 29 22:19:52 PST 2016: ended on defconfig test_next-20160301
